--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,44 @@ button, .button {
 	border-radius: 5px;
 }
 
+.modalBlackWindow {
+	display: none;
+	position: absolute;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	background-color: #08080856;
+}
+
+.modalBlackWindow.active {
+	display: flex;
+}
+
+.modalBlackWindow .modal {
+	position: relative;
+	min-width: 300px;
+	padding: 10px;
+	background: white;
+	border-radius: 5px;
+	padding-top: 15px;
+	padding-right: 20px;
+}
+
+.modalBlackWindow .modal .closeBtn {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 0;
+	right: 0;
+	padding: 5px;
+	width: 25px;
+	height: 25px;
+	background: transparent;
+}
+
 .App {
 	text-align: center;
 }
