--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ html, body, #root {
 	margin: 0;
 	color: #1F2226;
 	font-family: 'Roboto', sans-serif;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	background: #f2f2f2;
 }
