--- a/src/components/HtmlTable/style.css
+++ b/src/components/HtmlTable/style.css
@@ -1,6 +1,7 @@
 .htmlBluetoolsTable {
     border: solid 1px #ccc;
     border-collapse: collapse;
+    width: 100%;
 }
 
 .htmlBluetoolsTable thead {
