Finished Default HTML table

--- a/src/App.css
+++ b/src/App.css
@@ -98,15 +98,19 @@ html, body, #root {
 	color: white
 }
 
+.faded-color {
+	background-color: #00000044;
+}
+
 input {
-	padding: 10px;
+	padding: 8px 10px;
 	border: solid 1px #ccc;
 	border-radius: 5px;
 }
 
 button, .button {
 	border: none;
-	padding: 10px;
+	padding: 8px 10px;
 	cursor: pointer;
 	border-radius: 5px;
 }
