--- a/src/components/HtmlModal/style.css
+++ b/src/components/HtmlModal/style.css
@@ -1,36 +1,63 @@
 .HtmlModalContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100vw;
-    height: 100vh;
+	display: none;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 100vw;
+	height: 100vh;
 }
 
 .HtmlModalContainer .HtmlModal {
-    border-radius: 5px;
-    max-width: 500px;
-    width: 40%;
-    overflow: hidden;
-    background-color: #ffffff;
-    max-height: 90%;
-    box-shadow: 0 0 10px #00000033;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	border-radius: 5px;
+	max-width: 500px;
+	width: 90%;
+	height: 70%;
+	overflow: hidden;
+	background-color: #ffffff;
+	max-height: 90%;
+	box-shadow: 0 0 10px #44444455;
 }
 
 .HtmlModalContainer .HtmlModal .titleModal {
-    display: flex;
-    font-size: 1.8em;
-    color: white;
-    padding: 10px 15px;
-    margin: 0;
-    height: 10%;
-    min-height: 60px;
-    align-items: center;
+	display: flex;
+	flex-shrink: 0;
+	flex-direction: column;
+	font-size: 1.8em;
+	color: white;
+	padding: 10px 15px;
+	padding-right: 36px;
+	margin: 0;
+	height: 10%;
+	min-height: 50px;
+	justify-content: center;
+	overflow: hidden;
 }
 
 .HtmlModalContainer .HtmlModal .bodyModal {
-    height: 90%;
-    overflow-y: scroll;
+	display: flex;
+	flex-direction: column;
+	height: 90%;
+	flex-grow: 1;
+	overflow-y: scroll;
+}
+
+.HtmlModalContainer .HtmlModal .closeModal {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 26px;
+	height: 26px;
+	top: 5px;
+	right: 5px;
+	cursor: pointer;
+}
+
+.HtmlModalContainer.active {
+	display: flex;
 }
