--- a/src/components/ToastDisplay/style.css
+++ b/src/components/ToastDisplay/style.css
@@ -3,21 +3,26 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
+    transform: translateY(-50%) translateX(-50%);
     padding: 6px 10px;
     border-radius: 5px;
     z-index: 100;
-    opacity: 0%;
-}
-
-.defaultToastDisplay.active {
-    display: block;
-    opacity: 100%;
+    opacity: 0;
+    cursor: default;
+    user-select: none;
 }
 
 .defaultToastDisplay.fadeOut {
     display: block;
-    opacity: 0%;
+    opacity: 0 !important;
     transition: 2s;
+}
+
+.defaultToastDisplay.active {
+    display: block;
+    opacity: 0.6 !important;
+}
+
+.notShowed {
+    display: none !important;
 }
