--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 html, body, #root {
+	display: flex;
+	flex-direction: column;
 	padding: 0;
 	margin: 0;
 	color: #1F2226;
