--- a/src/App.css
+++ b/src/App.css
@@ -104,11 +104,49 @@ html, body, #root {
 	background-color: #00000044;
 }
 
+.indicator {
+	margin: auto;
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+}
+
+.react-confirm-alert-overlay {
+	background: rgba(0, 0, 0, 0.3) !important
+}
+
+.react-confirm-alert-button-group {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end !important;
+}
+
+.react-confirm-alert-button-group button {
+	background: #2E6AD1 !important;
+	padding: 8px 10px !important;
+}
+
+.green {
+	background: #009421;
+}
+
+.red {
+	background: #c20808;
+}
+
+form {
+	padding: 10px;
+}
+
 input, select {
 	padding: 8px 10px;
 	border: solid 1px #ccc;
 	border-radius: 5px;
 	background: white;
+}
+
+input:disabled {
+	filter: grayscale(120%) brightness(90%);
 }
 
 button, .button {
