--- a/src/App.css
+++ b/src/App.css
@@ -208,3 +208,19 @@ button, .button {
 	margin: 5px;
 	font-weight: 500;
 }
+
+
+footer.save {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-end;
+	padding: 10px;
+}
+
+button.btnSave {
+	bottom: 10px;
+	margin-right: 14px;
+	right: 10px;
+	color: white;
+}
