--- a/src/pages/CadUser/FormCadUser/style.css
+++ b/src/pages/CadUser/FormCadUser/style.css
@@ -20,6 +20,14 @@
 	overflow: hidden;
 }
 
+.CadUserContainer .imgContainer div img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	justify-content: center;
+	align-items: center;
+}
+
 .CadUserContainer .input-fields {
 	display: grid;
 	grid-template-columns: 1fr minmax(120px, 150px);
